--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,9 +24,13 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
+    defaultConfig {
+        multiDexEnabled true
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -60,4 +64,7 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    compile 'com.android.support:multidex:1.0.1'
 }
