--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,20 @@ dependencies:
   google_fonts: ^1.1.1
   carousel_slider: ^2.3.1
   sailor: ^0.7.1
+  firebase_auth: ^0.18.3
+  firebase_core: ^0.5.2
+  cloud_firestore: ^0.14.3
+  modal_progress_hud: ^0.1.3
+  shared_preferences: ^0.5.12+4
+  # backdrop: ^0.4.7
   jiffy: ^3.0.1
+  firebase_database: ^4.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+ 
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
